--- a/minigames/numeros3/repasocontorno9.html
+++ b/minigames/numeros3/repasocontorno9.html
@@ -36,7 +36,7 @@ var acierto=0, cont=1;
             cont=cont+1;
             acierto=acierto+1;
         }
-	   if (acierto==15)
+	   if (acierto==11)
 		{
 			document.getElementById('gato').innerHTML="Gatos";
 			gatoimg1.src="./images/gatocolor.png";
@@ -47,8 +47,9 @@ var acierto=0, cont=1;
 			gatoimg6.src="./images/gatocolor.png";
 			gatoimg7.src="./images/gatocolor.png";
 			gatoimg8.src="./images/gatocolor.png";
+			gatoimg9.src="./images/gatocolor.png";
 		}
-		if (acierto==30)
+		if (acierto==22)
 		{
 			document.getElementById('perro').innerHTML="Perros";
 			perroimg1.src="./images/perrocolor.png";
@@ -59,8 +60,9 @@ var acierto=0, cont=1;
 			perroimg6.src="./images/perrocolor.png";
 			perroimg7.src="./images/perrocolor.png";
 			perroimg8.src="./images/perrocolor.png";
+			perroimg9.src="./images/perrocolor.png";
 		}
-        if(acierto==45)
+        if(acierto==33)
         {
 			document.getElementById('conejo').innerHTML="Conejos";
 			conejoimg1.src="./images/conejocolor.png";
@@ -71,6 +73,7 @@ var acierto=0, cont=1;
 			conejoimg6.src="./images/conejocolor.png";
             conejoimg7.src="./images/conejocolor.png";
             conejoimg8.src="./images/conejocolor.png";
+            conejoimg9.src="./images/conejocolor.png";
 			window.alert("muy bien");
 			acierto=0;
         }
@@ -96,17 +99,17 @@ var acierto=0, cont=1;
 		 <IMG SRC="./images/contornos/nueve10.png" ID="ele10" USEMAP="#nueve.png" class="invisible1">
 		 <IMG SRC="./images/contornos/nueve11.png" ID="ele11" USEMAP="#nueve.png" class="invisible1">
              <MAP NAME="nueve.png" style="position:absolute;cursor: url(./images/estilo/paloma.gif),url(./images/paloma.ani),auto;">
-                <AREA SHAPE=POLY COORDS="78,62,104,62,100,38,90,20,73,41,79,49" OnMouseOver="rellenar('ele1')">
-                <AREA SHAPE=POLY COORDS="72,40,88,17,69,2,37,5,22,16,45,40,59,34" OnMouseOver="rellenar('ele2')">
-                <AREA SHAPE=POLY COORDS="44,38,23,14,3,41,0,73,29,67,34,49" OnMouseOver="rellenar('ele3')">
-                <AREA SHAPE=POLY COORDS="30,67,3,77,9,107,18,117,35,90,30,79" OnMouseOver="rellenar('ele4')">
-                <AREA SHAPE=POLY COORDS="18,117,37,124,57,120,87,84,73,76,62,95,37,94,30,91" OnMouseOver="rellenar('ele5')">
-                <AREA SHAPE=POLY COORDS="79,62,104,64,104,96,73,77" OnMouseOver="rellenar('ele6')">
-                <AREA SHAPE=POLY COORDS="85,86,104,96,95,133,55,126" OnMouseOver="rellenar('ele7')">
-                <AREA SHAPE=POLY COORDS="54,125,94,134,79,174,43,159" OnMouseOver="rellenar('ele8')">
-                <AREA SHAPE=POLY COORDS="41,159,76,173,62,208,33,184" OnMouseOver="rellenar('ele9')">
-                <AREA SHAPE=POLY COORDS="32,187,65,208,46,225,30,224,24,209,24,201"  OnMouseOver="rellenar('ele10')">
-                <AREA SHAPE=POLY COORDS="33,182,65,202,51,221,35,226,26,208" OnMouseOver="rellenar('ele11')">
+                <AREA SHAPE=POLY COORDS="79,63,104,62,99,30,90,19,73,38,77,51" OnMouseOver="rellenar('ele1')">
+				<AREA SHAPE=POLY COORDS="70,39,90,15,68,4,47,1,24,12,22,12,40,36,55,34" OnMouseOver="rellenar('ele2')">
+				<AREA SHAPE=POLY COORDS="23,14,41,37,32,55,30,67,6,77,9,39" OnMouseOver="rellenar('ele3')">
+				<AREA SHAPE=POLY COORDS="27,68,0,80,15,113,36,88,27,80" OnMouseOver="rellenar('ele4')">
+				<AREA SHAPE=POLY COORDS="36,87,18,116,35,126,52,123,57,121,55,96,40,96" OnMouseOver="rellenar('ele5')">
+				<AREA SHAPE=POLY COORDS="57,121,87,85,76,77,63,91,55,97" OnMouseOver="rellenar('ele6')">
+				<AREA SHAPE=POLY COORDS="76,77,103,94,105,61,78,61" OnMouseOver="rellenar('ele7')">
+				<AREA SHAPE=POLY COORDS="88,87,55,122,95,130,105,95" OnMouseOver="rellenar('ele8')">
+				<AREA SHAPE=POLY COORDS="57,124,90,130,77,175,43,155" OnMouseOver="rellenar('ele9')">
+				<AREA SHAPE=POLY COORDS="42,158,75,174,61,208,28,184" OnMouseOver="rellenar('ele10')">
+				<AREA SHAPE=POLY COORDS="29,184,24,209,35,226,53,226,64,205" OnMouseOver="rellenar('ele11')">
             </MAP>
      </div>
 	 <img src="./images/gato.png" class="animal" id="gatoimg1"/>
@@ -117,6 +120,7 @@ var acierto=0, cont=1;
 	 <img src="./images/gato.png" class="animal" id="gatoimg6" style="left:7%;top:63%"/>
 	 <img src="./images/gato.png" class="animal" id="gatoimg7" style="left:12.5%;top:63%"/>
 	 <img src="./images/gato.png" class="animal" id="gatoimg8" style="left:16%;top:63%"/>
+	 <img src="./images/gato.png" class="animal" id="gatoimg9" style="left:9.5%;top:63%"/>
 	  <font id="gato" size="5" style="left:11%;top:62%;position:absolute"></font>
 </div> 
  <!-- imagenes del 2 recorrido -->
@@ -135,17 +139,17 @@ var acierto=0, cont=1;
 		  <IMG SRC="./images/contornos/nueve10.png" ID="ele21" USEMAP="#nueve2.png" class="invisible2"  >
 		  <IMG SRC="./images/contornos/nueve11.png" ID="ele22" USEMAP="#nueve2.png" class="invisible2"  >
              <MAP NAME="nueve2.png" style="position:absolute;cursor: url(./images/estilo/paloma.gif),url(./images/estilo/paloma.ani),auto;">
-                <AREA SHAPE=POLY COORDS="78,62,104,62,100,38,90,20,73,41,79,49"  OnMouseOver="rellenar('ele12')">
-                <AREA SHAPE=POLY COORDS="72,40,88,17,69,2,37,5,22,16,45,40,59,34"  OnMouseOver="rellenar('ele13')">
-                <AREA SHAPE=POLY COORDS="44,38,23,14,3,41,0,73,29,67,34,49"  OnMouseOver="rellenar('ele14')">
-                <AREA SHAPE=POLY COORDS="30,67,3,77,9,107,18,117,35,90,30,79"  OnMouseOver="rellenar('ele15')">
-                <AREA SHAPE=POLY COORDS="18,117,37,124,57,120,87,84,73,76,62,95,37,94,30,91"  OnMouseOver="rellenar('ele16')">
-                <AREA SHAPE=POLY COORDS="79,62,104,64,104,96,73,77"  OnMouseOver="rellenar('ele17')">
-                <AREA SHAPE=POLY COORDS="85,86,104,96,95,133,55,126"  OnMouseOver="rellenar('ele18')">
-                <AREA SHAPE=POLY COORDS="54,125,94,134,79,174,43,159"  OnMouseOver="rellenar('ele19')">
-                <AREA SHAPE=POLY COORDS="41,159,76,173,62,208,33,184"  OnMouseOver="rellenar('ele20')">
-                <AREA SHAPE=POLY COORDS="32,187,65,208,46,225,30,224,24,209,24,201"  OnMouseOver="rellenar('ele21')">
-                <AREA SHAPE=POLY COORDS="33,182,65,202,51,221,35,226,26,208"  OnMouseOver="rellenar('ele22')">
+                <AREA SHAPE=POLY COORDS="79,63,104,62,99,30,90,19,73,38,77,51" OnMouseOver="rellenar('ele12')">
+				<AREA SHAPE=POLY COORDS="70,39,90,15,68,4,47,1,24,12,22,12,40,36,55,34" OnMouseOver="rellenar('ele13')">
+				<AREA SHAPE=POLY COORDS="23,14,41,37,32,55,30,67,6,77,9,39" OnMouseOver="rellenar('ele14')">
+				<AREA SHAPE=POLY COORDS="27,68,0,80,15,113,36,88,27,80" OnMouseOver="rellenar('ele15')">
+				<AREA SHAPE=POLY COORDS="36,87,18,116,35,126,52,123,57,121,55,96,40,96" OnMouseOver="rellenar('ele16')">
+				<AREA SHAPE=POLY COORDS="57,121,87,85,76,77,63,91,55,97" OnMouseOver="rellenar('ele17')">
+				<AREA SHAPE=POLY COORDS="76,77,103,94,105,61,78,61" OnMouseOver="rellenar('ele18')">
+				<AREA SHAPE=POLY COORDS="88,87,55,122,95,130,105,95" OnMouseOver="rellenar('ele19')">
+				<AREA SHAPE=POLY COORDS="57,124,90,130,77,175,43,155" OnMouseOver="rellenar('ele20')">
+				<AREA SHAPE=POLY COORDS="42,158,75,174,61,208,28,184" OnMouseOver="rellenar('ele21')">
+				<AREA SHAPE=POLY COORDS="29,184,24,209,35,226,53,226,64,205" OnMouseOver="rellenar('ele22')">
             </MAP>
      </div>
 	 <img src="./images/perro.png" class="animal" id="perroimg1"/>
@@ -156,6 +160,7 @@ var acierto=0, cont=1;
 	 <img src="./images/perro.png" class="animal" id="perroimg6" style="left:42%;top:63%"/>
 	 <img src="./images/perro.png" class="animal" id="perroimg7" style="left:48%;top:63%"/>
 	 <img src="./images/perro.png" class="animal" id="perroimg8" style="left:51%;top:63%"/>
+	 <img src="./images/perro.png" class="animal" id="perroimg9" style="left:45%;top:63%"/>
 	  <font id="perro" size="5" style="left:45%;top:62%;position:absolute"></font>
 </div>
  <!-- imagenes del 3 recorrido -->
@@ -174,17 +179,17 @@ var acierto=0, cont=1;
 		 <IMG SRC="./images/contornos/nueve10.png" ID="ele32" USEMAP="#nueve3.png" class="invisible3"  >
 		 <IMG SRC="./images/contornos/nueve11.png" ID="ele33" USEMAP="#nueve3.png" class="invisible3"  >
              <MAP NAME="nueve3.png" style="position:absolute;cursor: url(./images/estilo/paloma.gif),url(./images/estilo/paloma.ani),auto;">
-                <AREA SHAPE=POLY COORDS="78,62,104,62,100,38,90,20,73,41,79,49"  OnMouseOver="rellenar('ele23')">
-                <AREA SHAPE=POLY COORDS="72,40,88,17,69,2,37,5,22,16,45,40,59,34"  OnMouseOver="rellenar('ele24')">
-                <AREA SHAPE=POLY COORDS="44,38,23,14,3,41,0,73,29,67,34,49"  OnMouseOver="rellenar('ele25')">
-                <AREA SHAPE=POLY COORDS="30,67,3,77,9,107,18,117,35,90,30,79"  OnMouseOver="rellenar('ele26')">
-                <AREA SHAPE=POLY COORDS="18,117,37,124,57,120,87,84,73,76,62,95,37,94,30,91"  OnMouseOver="rellenar('ele27')">
-                <AREA SHAPE=POLY COORDS="79,62,104,64,104,96,73,77"  OnMouseOver="rellenar('ele28')">
-                <AREA SHAPE=POLY COORDS="85,86,104,96,95,133,55,126"  OnMouseOver="rellenar('ele29')">
-                <AREA SHAPE=POLY COORDS="54,125,94,134,79,174,43,159"  OnMouseOver="rellenar('ele30')">
-                <AREA SHAPE=POLY COORDS="41,159,76,173,62,208,33,184"  OnMouseOver="rellenar('ele31')">
-                <AREA SHAPE=POLY COORDS="32,187,65,208,46,225,30,224,24,209,24,201"  OnMouseOver="rellenar('ele32')">
-                <AREA SHAPE=POLY COORDS="33,182,65,202,51,221,35,226,26,208"  OnMouseOver="rellenar('ele33')">
+                <AREA SHAPE=POLY COORDS="79,63,104,62,99,30,90,19,73,38,77,51" OnMouseOver="rellenar('ele23')">
+				<AREA SHAPE=POLY COORDS="70,39,90,15,68,4,47,1,24,12,22,12,40,36,55,34" OnMouseOver="rellenar('ele24')">
+				<AREA SHAPE=POLY COORDS="23,14,41,37,32,55,30,67,6,77,9,39" OnMouseOver="rellenar('ele25')">
+				<AREA SHAPE=POLY COORDS="27,68,0,80,15,113,36,88,27,80" OnMouseOver="rellenar('ele26')">
+				<AREA SHAPE=POLY COORDS="36,87,18,116,35,126,52,123,57,121,55,96,40,96" OnMouseOver="rellenar('ele27')">
+				<AREA SHAPE=POLY COORDS="57,121,87,85,76,77,63,91,55,97" OnMouseOver="rellenar('ele28')">
+				<AREA SHAPE=POLY COORDS="76,77,103,94,105,61,78,61" OnMouseOver="rellenar('ele29')">
+				<AREA SHAPE=POLY COORDS="88,87,55,122,95,130,105,95" OnMouseOver="rellenar('ele30')">
+				<AREA SHAPE=POLY COORDS="57,124,90,130,77,175,43,155" OnMouseOver="rellenar('ele31')">
+				<AREA SHAPE=POLY COORDS="42,158,75,174,61,208,28,184" OnMouseOver="rellenar('ele32')">
+				<AREA SHAPE=POLY COORDS="29,184,24,209,35,226,53,226,64,205" OnMouseOver="rellenar('ele33')">
             </MAP>
      </div>
 	 <img src="./images/conejo.png" class="animal" id="conejoimg1"/>
@@ -195,6 +200,7 @@ var acierto=0, cont=1;
 	 <img src="./images/conejo.png" class="animal" id="conejoimg6" style="left:73%;top:63%"/>
 	 <img src="./images/conejo.png" class="animal" id="conejoimg7" style="left:80%;top:63%"/>
 	 <img src="./images/conejo.png" class="animal" id="conejoimg8" style="left:83%;top:63%"/>
+	 <img src="./images/conejo.png" class="animal" id="conejoimg9" style="left:76.5%;top:63%"/>
 	  <font id="conejo" size="5" style="left:76%;top:62%;position:absolute"></font>
 </div>
  </body>
