--- a/proyecto/pag2.html
+++ b/proyecto/pag2.html
@@ -1,61 +1,56 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML>
- <HEAD>
-     <TITLE> Login Alumnos </TITLE>
-<link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
-<link rel="stylesheet" href="../css/style.css">
-<script src="../js/jquery-1.11.0.min.js"></script>
-<script type="text/javascript">
-function Seleccion(numero,ctrl){
-
-
-if(ctrl[0].checked==false && ctrl[1].checked==false){
-	alert('Debe seleccionar una letra');
-	return;
-	}
-
-	document.location.href='alumnos.php?ref='+numero+((ctrl[0].checked)?'1':'2');
-}
-$(document).ready(function(){
-		$("#tres").mouseenter(function(){
-			$("#tres").animate({height:120,width:120},200);
-		});
-		$("#cuatro").mouseenter(function(){
-			$("#cuatro").animate({height:120,width:120},200);
-		});
-		$("#cinco").mouseenter(function(){
-			$("#cinco").animate({height:120,width:120},200);
-		});
-		 $("#tres").mouseleave(function(){
-			 $("#tres").animate({height:100,width:100},200);
-		 });
-		 $("#cuatro").mouseleave(function(){
-			 $("#cuatro").animate({height:100,width:100},200);
-		 });
-		 $("#cinco").mouseleave(function(){
-			 $("#cinco").animate({height:100,width:100},200);
-		 });
-  });
-</script>
-</HEAD>
- <BODY id="loginninos">
-    <div id="cabecera">
-        <p>EDUPEQUES Educaci&oacute;n Infantil</p>
-    </div>
-    <div style="position:absolute;position:absolute;width:50%;left:28%;top:25%;">
-        <form name=formulario>
-            <TABLE width="100%" align=center>
-				<TR class="grupo" cellspacing=20>
-                    <td colspan=2><INPUT TYPE="radio" NAME="selector" value="a">a</td>
-                    <td><INPUT TYPE="radio" NAME="selector" value="b">b</td>
-                </TR>
-                <TR class="edad">
-                    <TD><img src="img/3.png" width="100" onClick="Seleccion(3,document.formulario.selector)" class="edad" id="tres"></TD>
-                    <TD><img src="img/4.png" width="100" onClick="Seleccion(4,document.formulario.selector)" class="edad" id="cuatro"></TD>
-                    <TD><img src="img/5.png" width="100" onClick="Seleccion(5,document.formulario.selector)" class="edad" id="cinco"></TD>
-                </TR>
-            </TABLE>
-        </form>  
-    </div>
- </BODY>
+    <HEAD>
+        <TITLE> Login Alumnos </TITLE>
+        <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
+        <link rel="stylesheet" href="../css/style.css">
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
+        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+        <script type="text/javascript">
+            $(function(){
+                var num;
+                $(".edad").click(function(){
+                    switch($(this).attr("id"))
+                    {
+                        case "tres":
+                            num = 3;
+                            break;
+                        case "cuatro":
+                            num = 4;
+                            break;
+                        case "cinco":
+                            num = 5;
+                            break;
+                        default:
+                            break;
+                    }
+                    document.location = "alumnos.php?ref="+num+($("input[name=selector]:checked").val() == "a" ? "1" : "2");
+                });
+                $(".edad")
+                .mouseover(function(){ $(this).animate({height:120,width:120},200); })
+                .mouseout (function(){ $(this).animate({height:100,width:100},200); });
+            });
+        </script>
+    </HEAD>
+    <BODY id="loginninos">
+        <div id="cabecera">
+            <p>EDUPEQUES Educaci&oacute;n Infantil</p>
+        </div>
+        <div style="position:absolute;position:absolute;width:50%;left:28%;top:25%;">
+            <form name=formulario>
+                <TABLE width="100%" align=center>
+                    <TR class="grupo" cellspacing=20>
+                        <td colspan=2><INPUT TYPE="radio" NAME="selector" value="a">a</td>
+                        <td><INPUT TYPE="radio" NAME="selector" value="b">b</td>
+                    </TR>
+                    <TR class="edad">
+                        <TD><img src="img/3.png" width="100" class="edad" id="tres"></TD>
+                        <TD><img src="img/4.png" width="100" class="edad" id="cuatro"></TD>
+                        <TD><img src="img/5.png" width="100" class="edad" id="cinco"></TD>
+                    </TR>
+                </TABLE>
+            </form>  
+        </div>
+    </BODY>
 </HTML>
