--- a/minigames/Habitos/animalesSelva.html
+++ b/minigames/Habitos/animalesSelva.html
@@ -4,6 +4,28 @@
   <title>Animales de la selva </title>
  
 <script type="text/javascript">
+var sonidos = 
+            {
+                /*
+                ID:new Audio(FILENAME),  <- remember to use comma
+                */
+                0:new Audio("../../sounds/JungleAnimals/ES_Crocodile.mp3"),
+				2:new Audio("../../sounds/JungleAnimals/ES_Bear.mp3"),
+				1:new Audio("../../sounds/JungleAnimals/ES_Elephant.mp3"),
+				3:new Audio("../../sounds/JungleAnimals/ES_Fish.mp3"),
+				4:new Audio("../../sounds/JungleAnimals/ES_Hipopotamus.mp3"),
+				5:new Audio("../../sounds/JungleAnimals/ES_Leon.mp3"),
+				6:new Audio("../../sounds/JungleAnimals/ES_Monkey.mp3"),
+				 7:new Audio("../../sounds/JungleAnimals/ES_Parrot.mp3"),
+				8:new Audio("../../sounds/JungleAnimals/ES_Raccoon.mp3"),
+				9:new Audio("../../sounds/JungleAnimals/ES_Rhino.mp3"),
+				10:new Audio("../../sounds/JungleAnimals/ES_Snake.mp3"),
+				11:new Audio("../../sounds/JungleAnimals/ES_Zebra.mp3"),
+				
+					
+				//1:new Audio("/Habitos/minigames/Sounds/Professions/ES_Baker.mp3"),
+            }
+
 function pintar(obj)
 {
    document.getElementById(obj).style.display = '';
@@ -98,29 +120,29 @@ function pintar(obj)
 
 <MAP NAME="animalesSelva.png">
 <!-- cocodrilo-->
-<AREA SHAPE=RECT COORDS="11,129,99,210" OnClick="pintar('cocodrilo')"style="cursor: pointer">
+<AREA SHAPE=RECT COORDS="11,129,99,210" OnClick="pintar('cocodrilo');sonidos[0].play()"style="cursor: pointer">
 <!-- oso-->
-<AREA SHAPE=RECT COORDS="116,128,201,211" OnClick="pintar('oso')"style="cursor: pointer">
+<AREA SHAPE=RECT COORDS="116,128,201,211" OnClick="pintar('oso');sonidos[2].play()"style="cursor: pointer">
 <!-- elefante-->
-<AREA SHAPE=RECT COORDS="219,128,303,210" OnClick="pintar('elefante')"style="cursor: pointer">
+<AREA SHAPE=RECT COORDS="219,128,303,210" OnClick="pintar('elefante');sonidos[1].play()"style="cursor: pointer">
 <!-- pez-->
-<AREA SHAPE=RECT COORDS="13,230,99,314" OnClick="pintar('pez')"style="cursor: pointer">
+<AREA SHAPE=RECT COORDS="13,230,99,314" OnClick="pintar('pez');sonidos[3].play()"style="cursor: pointer">
 <!--hipopotamo-->
-<AREA SHAPE=RECT COORDS="116,230,201,316" OnClick="pintar('hipopotamo')"style="cursor: pointer">
+<AREA SHAPE=RECT COORDS="116,230,201,316" OnClick="pintar('hipopotamo');sonidos[4].play()"style="cursor: pointer">
 <!--leon-->
-<AREA SHAPE=RECT COORDS="219,230,302,314" OnClick="pintar('leon')"style="cursor: pointer">
+<AREA SHAPE=RECT COORDS="219,230,302,314" OnClick="pintar('leon');sonidos[5].play()"style="cursor: pointer">
 <!--mono-->
-<AREA SHAPE=RECT COORDS="15,331,99,418" OnClick="pintar('mono')"style="cursor: pointer">
+<AREA SHAPE=RECT COORDS="15,331,99,418" OnClick="pintar('mono');sonidos[6].play()"style="cursor: pointer">
 <!--loro-->
-<AREA SHAPE=RECT COORDS="119,331,199,416" OnClick="pintar('loro')"style="cursor: pointer">
+<AREA SHAPE=RECT COORDS="119,331,199,416" OnClick="pintar('loro');sonidos[7].play()"style="cursor: pointer">
 <!--mapache-->
-<AREA SHAPE=RECT COORDS="219,333,304,416" OnClick="pintar('mapache')"style="cursor: pointer">
+<AREA SHAPE=RECT COORDS="219,333,304,416" OnClick="pintar('mapache');sonidos[8].play()"style="cursor: pointer">
 <!--rinoceronte-->
-<AREA SHAPE=RECT COORDS="16,435,95,516" OnClick="pintar('rinoceronte')"style="cursor: pointer">
+<AREA SHAPE=RECT COORDS="16,435,95,516" OnClick="pintar('rinoceronte');sonidos[9].play()"style="cursor: pointer">
 <!--serpiente-->
-<AREA SHAPE=RECT COORDS="120,432,201,517" OnClick="pintar('serpiente')"style="cursor: pointer">
+<AREA SHAPE=RECT COORDS="120,432,201,517" OnClick="pintar('serpiente');sonidos[10].play()"style="cursor: pointer">
 <!--cebra-->
-<AREA SHAPE=RECT COORDS="219,434,302,516" OnClick="pintar('cebra')"style="cursor: pointer">
+<AREA SHAPE=RECT COORDS="219,434,302,516" OnClick="pintar('cebra');sonidos[11].play()"style="cursor: pointer">
 
 </MAP>
  </div>
