Profes page adapted for FSQL

--- a/profes/index.html
+++ b/profes/index.html
@@ -16,7 +16,7 @@
 			<TABLE align="center" cellspacing="45" style="margin-left:25%">
 				<TR>
 					<TD id="label">Usuario:</TD>
-					<TD><input type="text" name="name" id="name" size="10" maxlength="10"/></TD>
+					<TD><input type="text" name="email" id="email" size="10" maxlength="20"/></TD>
 				</TR>
 				<TR>
 					<TD id="label">Clave:</TD>
