--- a/minigames/Habitos/animalesSelva.html
+++ b/minigames/Habitos/animalesSelva.html
@@ -61,8 +61,8 @@ function pintar(obj)
  .imagen
 {
  position:absolute;
- top:10px;
- left:200px;
+ top:10%;
+ left:200%;
  width:416;
  height:512;
  padding:40;
