--- a/minigames/Habitos/elBano.html
+++ b/minigames/Habitos/elBano.html
@@ -57,8 +57,8 @@ function pintar(obj)
  .imagen
 {
  position:absolute;
- top:80px;
- left:500px;
+ top:9%;
+ left:40%;
  width:416;
  height:512;
  padding:40;
@@ -75,7 +75,7 @@ function pintar(obj)
 
 
     </HEAD>
-<body bgcolor=#ffccff>
+<body bgcolor=#ffff66>
 <div class="principal"> 
  <div class="titulo"> 
  <p   style="text-align:center;font-size:50px;margin-top:0%"><b>El Baño</b></p>
