--- a/minigames/Habitos/lasProfesiones.html
+++ b/minigames/Habitos/lasProfesiones.html
@@ -63,8 +63,8 @@ function pintar(obj)
  .imagen
 {
  position:absolute;
- top:10px;
- left:200px;
+ top:10%;
+ left:50%;
  width:416;
  height:512;
  padding:40;
@@ -82,8 +82,8 @@ function pintar(obj)
  .imagen
 {
  position:absolute;
- top:50px;
- left:400px;
+ top:8%;
+ left:30%;
  width:416;
  height:512;
  padding:40;
