--- a/minigames/Habitos/animalesGranja.html
+++ b/minigames/Habitos/animalesGranja.html
@@ -48,9 +48,10 @@ function pintar(obj)
     }
     .contenedor
     {
+		
 		font-family: Homer Simpson, cursive; 
 		font-size: 16pt; 
-        height:43px;
+        height:43%;
         margin-left:3%;
 		margin-bottom:50%;
 		padding-top:1%;
@@ -63,8 +64,8 @@ function pintar(obj)
  .imagen
 {
  position:absolute;
- top:10px;
- left:200px;
+ top:10%;
+ left:200%;
  width:416;
  height:512;
  padding:40;
