--- a/minigames/Habitos/laCara.html
+++ b/minigames/Habitos/laCara.html
@@ -46,7 +46,7 @@ function pintar(obj)
     {
 		font-family: Homer Simpson, cursive; 
 		font-size: 16pt; 
-        height:43px;
+        height:43%;
         margin-left:3%;
 		margin-bottom:50%;
 		padding-top:1%;
@@ -57,8 +57,8 @@ function pintar(obj)
  .imagen
 {
  position:absolute;
- top:80px;
- left:500px;
+ top:12%;
+ left:37%;
  width:416;
  height:512;
  padding:40;
