--- a/minigames/Habitos/losNumeros.html
+++ b/minigames/Habitos/losNumeros.html
@@ -45,7 +45,7 @@ function pintar(obj)
     {
 		font-family: Homer Simpson, cursive; 
 		font-size: 16pt; 
-        height:43px;
+        height:43%;
         margin-left:3%;
 		margin-bottom:50%;
 		padding-top:1%;
@@ -58,8 +58,8 @@ function pintar(obj)
  .imagen
 {
  position:absolute;
- top:10px;
- left:200px;
+ top:1%;
+ left:14%;
  width:416;
  height:512;
  padding:40;
