--- a/minigames/Habitos/losTransportes.html
+++ b/minigames/Habitos/losTransportes.html
@@ -44,7 +44,7 @@ function pintar(obj)
     {
 		font-family: Homer Simpson, cursive; 
 		font-size: 16pt; 
-        height:43px;
+        height:43%;
         margin-left:3%;
 		margin-bottom:50%;
 		padding-top:1%;
@@ -63,8 +63,8 @@ function pintar(obj)
  .imagen
 {
  position:absolute;
- top:50px;
- left:350px;
+ top:5%;
+ left:25%;
  width:416;
  height:512;
  padding:40;
