--- a/minigames/numeros3/contorno0.html
+++ b/minigames/numeros3/contorno0.html
@@ -2,8 +2,8 @@
 <html>
  <head>
  <title> Contorno 0</title>
- <link href="../../css/style.css" rel="stylesheet" type="text/css"/>
- <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon" />
+    <link href="../../css/style.css" rel="stylesheet" type="text/css"/>
+    <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon" />
  <style type="text/css">
     .principal
     {
@@ -25,10 +25,9 @@
     }
 	.invisible
     {
-        left: 35.85%;
+        left: 35.7%;
         position: absolute;
         visibility: hidden;
-		cursor: url(../images/estilo/paloma.gif),url(../images/estilo/paloma.ani),auto;
     }
  </style>
  <script> 
@@ -50,23 +49,23 @@
 	}
 </script>
  </head>
-<body>
+<body id="ninos">
     <p style="text-align:center;font-size:40px;margin-top:1%">Rellena el contorno de cero</p>
     <div class="principal"> 
         <div class="contenedor">
             <!-- imagenes del recorrido -->
-            <IMG SRC="./images/cero.png" USEMAP="#cero.png" height=432 BORDER=0 style="position:absolute;cursor: url(./images/estilo/paloma.gif),url(./images/paloma.ani),auto;">
-            <IMG SRC="./images/contornos/cero01.png" ID="ele1" USEMAP="#cero.png" class="invisible">
-            <IMG SRC="./images/contornos/cero02.png" ID="ele2" USEMAP="#cero.png" class="invisible">
-            <IMG SRC="./images/contornos/cero03.png" ID="ele3" USEMAP="#cero.png" class="invisible">
-            <IMG SRC="./images/contornos/cero04.png" ID="ele4" USEMAP="#cero.png" class="invisible">
-            <IMG SRC="./images/contornos/cero05.png" ID="ele5" USEMAP="#cero.png" class="invisible">
-            <IMG SRC="./images/contornos/cero06.png" ID="ele6" USEMAP="#cero.png" class="invisible">
-            <IMG SRC="./images/contornos/cero07.png" ID="ele7" USEMAP="#cero.png" class="invisible">
-            <IMG SRC="./images/contornos/cero08.png" ID="ele8" USEMAP="#cero.png" class="invisible">
-            <IMG SRC="./images/contornos/cero09.png" ID="ele9" USEMAP="#cero.png" class="invisible">
-            <IMG SRC="./images/contornos/cero10.png" ID="ele10" USEMAP="#cero.png" class="invisible">
-            <MAP NAME="cero.png" style="position:absolute;cursor: url(./images/estilo/paloma.gif),url(./images/paloma.ani),auto;">    
+            <IMG SRC="../../images/cero.png" USEMAP="#cero.png" height=432 BORDER=0 style="position:absolute;">
+            <IMG SRC="../../images/contornos/cero01.png" ID="ele1" USEMAP="#cero.png" class="invisible">
+            <IMG SRC="../../images/contornos/cero02.png" ID="ele2" USEMAP="#cero.png" class="invisible">
+            <IMG SRC="../../images/contornos/cero03.png" ID="ele3" USEMAP="#cero.png" class="invisible">
+            <IMG SRC="../../images/contornos/cero04.png" ID="ele4" USEMAP="#cero.png" class="invisible">
+            <IMG SRC="../../images/contornos/cero05.png" ID="ele5" USEMAP="#cero.png" class="invisible">
+            <IMG SRC="../../images/contornos/cero06.png" ID="ele6" USEMAP="#cero.png" class="invisible">
+            <IMG SRC="../../images/contornos/cero07.png" ID="ele7" USEMAP="#cero.png" class="invisible">
+            <IMG SRC="../../images/contornos/cero08.png" ID="ele8" USEMAP="#cero.png" class="invisible">
+            <IMG SRC="../../images/contornos/cero09.png" ID="ele9" USEMAP="#cero.png" class="invisible">
+            <IMG SRC="../../images/contornos/cero10.png" ID="ele10" USEMAP="#cero.png" class="invisible">
+            <MAP NAME="cero.png" style="position:absolute;">    
                 <AREA SHAPE=POLY COORDS="140,59,139,0,93,9,51,42,38,63,87,84,103,71,125,54" OnMouseOver="rellenar('ele1')">
                 <AREA SHAPE=POLY COORDS="89,84,35,62,16,116,8,162,67,162,72,123" OnMouseOver="rellenar('ele2')">
                 <AREA SHAPE=POLY COORDS="65,163,5,160,2,216,1,254,60,240,60,199" OnMouseOver="rellenar('ele3')">
