Students - Improving the code

--- a/proyecto/pag2.html
+++ b/proyecto/pag2.html
@@ -41,8 +41,8 @@
             <form name=formulario>
                 <TABLE width="100%" align=center>
                     <TR class="grupo" cellspacing=20>
-                        <td colspan=2><INPUT TYPE="radio" NAME="selector" value="a">a</td>
-                        <td><INPUT TYPE="radio" NAME="selector" value="b">b</td>
+                        <td colspan=2><INPUT TYPE="radio" NAME="selector" value="a" />a</td>
+                        <td><INPUT TYPE="radio" NAME="selector" value="b" />b</td>
                     </TR>
                     <TR class="edad">
                         <TD><img src="img/3.png" width="100" class="edad" id="tres"></TD>
