Fixed styles in login ninos

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -33,7 +33,7 @@ $(document).ready(function(){
         <TABLE align="center" id="boton" style="width:50%;position:absolute;top:75%;left:29%;display:none;">
         <TR>
             <TD><input TYPE="submit" name="ninos" id="nino"  value="Ni&ntilde;os" class="selec"></TD>
-            <TD><input TYPE="submit" name="porfes" id="profes"  value="Profesores" class="selec"></TD>
+            <TD><input TYPE="submit" name="porfes" id="porfes"  value="Profesores" class="selec"></TD>
         </TR>
         </TABLE>
         </form>
