--- a/proyecto/pag2.html
+++ b/proyecto/pag2.html
@@ -33,7 +33,7 @@
             });
         </script>
     </HEAD>
-    <BODY id="loginninos">
+    <BODY id="ninos">
         <div id="cabecera">
             <p>EDUPEQUES Educaci&oacute;n Infantil</p>
         </div>
